--- a/pug/index.pug
+++ b/pug/index.pug
@@ -35,7 +35,11 @@ html
 				.b-main.b-main--portfolio
 					.container
 						.b-main__inner
-							h1.b-main__title
+							.b-main__circle.b-main__circle--1
+							.b-main__circle.b-main__circle--2
+							.b-main__circle.b-main__circle--3
+							.b-main__dots
+							h1.b-main__title Наши работы
 							.b-portfolio
 								ul.b-portfolio__list
 									li.b-portfolio__item
