--- a/sass/style.sass
+++ b/sass/style.sass
@@ -54,12 +54,19 @@ select::-ms-expand
 	display: table-cell
 	vertical-align: top
 
-%circle
-	background-image: url(../img/circle.png)
+%circles
 	background-repeat: no-repeat
 	background-position: 50% 50%
 	background-size: cover
 	position: absolute
+
+%circle
+	@extend %circles
+	background-image: url(../img/circle.png)
+	
+%circle2
+	@extend %circles
+	background-image: url(../img/circle-without-shadow.png)
 
 .container
 	@extend %container
@@ -131,8 +138,8 @@ select::-ms-expand
 			top: 180px
 			left: -200px
 		&--2
-			top: 350px
-			right: -200px
+			top: 250px
+			right: -250px
 
 .b-portfolio
 	&__list
@@ -143,16 +150,12 @@ select::-ms-expand
 		display: flex
 		flex-wrap: wrap
 		justify-content: center
-		margin: 0 -15px
+		margin: 0 -35px
 	&__item
-		flex: 0 1 400px
+		flex: 0 1 calc(33.333% - 45px)
 		height: 400px
 		margin: 15px
 		padding: 50px
-		display: -webkit-flex
-		display: -moz-flex
-		display: -ms-flex
-		display: -o-flex
 		display: flex
 		flex-direction: column
 		align-items: center
@@ -174,6 +177,9 @@ select::-ms-expand
 				&__description
 					opacity: 1
 					visibility: visible
+				&__description
+					&::after
+						width: 100%
 		&::after
 			content: ''
 			visibility: hidden
@@ -194,7 +200,7 @@ select::-ms-expand
 		background-size: cover
 		background-position: 50% 50%
 		background-repeat: no-repeat
-		transition: all .4s
+		transition: all .4s ease-out
 	&__name
 		margin: 0
 		font-size: 34px
@@ -208,14 +214,56 @@ select::-ms-expand
 		color: inherit
 		text-decoration: none
 	&__description
-		border-top: 1px solid #fff
 		margin: 15px 0 0
-		padding-top: 10px
 		position: relative
 		z-index: 2
 		visibility: hidden
 		opacity: 0
 		transition: all .4s
+		&::after
+			content: ''
+			position: absolute
+			top: -10px
+			left: 50%
+			width: 1px
+			height: 1px
+			transform: translateX(-50%)
+			background-color: #fff
+			transition: all .4s ease-out .1s
+
+.b-main
+	overflow: hidden
+	padding: 60px 0
+	&__inner
+		position: relative
+	&__title
+		margin: 0
+		font-size: 48px
+		font-weight: normal
+		color: $color
+	&__circle
+		@extend %circle2
+		width: 400px
+		height: 400px
+		&--1
+			top: -400px
+			right: -50px
+		&--2
+			left: -300px
+			top: 280px
+		&--3
+			bottom: -150px
+			right: -100px
+	&__dots
+		position: absolute
+		top: 0
+		right: 0
+		width: 55px
+		height: 55px
+		background-repeat: no-repeat
+		background-position: 50% 50%
+		background-size: contain
+		background-image: url(../img/dots-accent.png)
 
 //ALWAYS END
 @import "media"
