--- a/pug/index.pug
+++ b/pug/index.pug
@@ -20,6 +20,23 @@ html
 	body
 		.w-page
 			.w-menu
+				.b-menu
+					.b-menu__inner
+						.b-menu__right
+							button.b-menu__close
+							.b-menu__wrap
+								ul.b-menu__list
+									lu.b-menu__item #[a.b-menu__link(href="") Портфолио]
+									lu.b-menu__item #[a.b-menu__link(href="") О нас]
+									lu.b-menu__item #[a.b-menu__link(href="") Контакты]
+						.b-menu__left
+							.b-menu__wrap
+								.b-menu__socials.b-socials
+									a.b-socials__item.b-socials__item--vk(href="")
+									a.b-socials__item.b-socials__item--behance(href="")
+									a.b-socials__item.b-socials__item--mail(href="")
+									a.b-socials__item.b-socials__item--phone(href="")
+								p.b-menu__copyright #[span.js-year 2018] © Owl Wing
 			.w-body
 				.b-header
 					.container
@@ -79,3 +96,12 @@ html
 											a.b-portfolio__name(href="") Sheff Log
 											p.b-portfolio__description  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam, obcaecati?
 									
+				.b-footer
+					.container
+						.b-footer__inner
+							.b-footer__socials.b-socials
+								a.b-socials__item.b-socials__item--vk(href="")
+								a.b-socials__item.b-socials__item--behance(href="")
+								a.b-socials__item.b-socials__item--mail(href="")
+								a.b-socials__item.b-socials__item--phone(href="")
+							p.b-footer__copyright #[span.js-year 2018] © Owl Wing
