--- a/sass/style.sass
+++ b/sass/style.sass
@@ -3,6 +3,7 @@
 @import "mixins"
 
 $color: #1DAFED
+$color-accent: #1441B3
 $font: 'DINPro-CondensedMedium', sans-serif
 
 html
@@ -70,6 +71,9 @@ select::-ms-expand
 
 .container
 	@extend %container
+
+.w-body
+	position: relative
 
 .b-header
 	position: absolute
@@ -233,7 +237,7 @@ select::-ms-expand
 
 .b-main
 	overflow: hidden
-	padding: 60px 0
+	padding: 60px 0 150px
 	&__inner
 		position: relative
 	&__title
@@ -264,6 +268,109 @@ select::-ms-expand
 		background-position: 50% 50%
 		background-size: contain
 		background-image: url(../img/dots-accent.png)
+
+.b-footer
+	position: absolute
+	bottom: 0
+	left: 0
+	width: 100%
+	padding: 50px 0
+	color: $color
+	&__socials,
+	&__copyright
+		display: inline-block
+		vertical-align: middle
+	&__copyright
+		margin-left: 25px
+		font-size: 24px
+		line-height: 1
+
+.b-socials
+	&__item
+		display: inline-block
+		cursor: pointer
+		color: inherit
+		text-decoration: none
+		transition: all .2s
+		&:hover
+			color: $color-accent
+		&+&
+			margin-left: 20px
+		&::before
+			@extend %icon
+			font-size: 25px
+		&--vk
+			&::before
+				content: '\e902'
+		&--behance
+			&::before
+				content: '\e903'
+		&--mail
+			&::before
+				content: '\e904'
+		&--phone
+			&::before
+				content: '\e905'
+
+.b-menu
+	position: fixed
+	z-index: 2
+	top: 0
+	left: 0
+	width: 100%
+	height: 100%
+	background-color: #fff
+	text-align: center
+	&__inner
+		height: 100%
+		display: flex
+		align-items: stretch
+		justify-content: center
+		flex-direction: row-reverse
+	&__left,
+	&__right
+		width: 50%
+		display: flex
+		align-items: center
+		justify-content: center
+	&__left
+		background-color: $color
+		color: #fff
+	&__right
+		color: $color
+	&__close
+		display: inline-block
+		position: absolute
+		top: 0
+		right: 0
+	&__socials
+		.b-socials__item
+				display: block
+		.b-socials__item+.b-socials__item
+				margin-left: 0
+				margin-top: 15px
+	&__copyright
+		margin-top: 20px
+		font-size: 24px
+		line-height: 1
+	&__item
+		display: block
+		&+&
+			margin-top: 30px
+	&__link
+		font-size: 48px
+		line-height: 1.2
+		text-decoration: none
+		color: inherit
+		transition: all .3s
+		&:hover
+			color: #000
+
+
+
+
+
+
 
 //ALWAYS END
 @import "media"
