--- a/app/css/style.css
+++ b/app/css/style.css
@@ -21,6 +21,8 @@
 html {
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
+  width: 100%;
+  height: 100%;
 }
 
 *,
@@ -32,11 +34,17 @@ html {
 }
 
 body {
+  width: 100%;
+  height: 100%;
   margin: 0;
   overflow-x: hidden;
   font-family: "DINPro-CondensedMedium", sans-serif;
   line-height: 1.4;
   font-size: 14px;
+}
+
+body.menu-opened {
+  overflow: hidden;
 }
 
 img {
@@ -67,7 +75,7 @@ select::-ms-expand {
   margin: 0 auto;
 }
 
-.b-hero__circle, .b-main__circle {
+.b-hero__circle, .b-main__circle, .b-menu__circle {
   background-repeat: no-repeat;
   background-position: 50% 50%;
   -webkit-background-size: cover;
@@ -79,12 +87,49 @@ select::-ms-expand {
   background-image: url(../img/circle.png);
 }
 
-.b-main__circle {
+.b-main__circle, .b-menu__circle {
   background-image: url(../img/circle-without-shadow.png);
+}
+
+.w-page--single {
+  height: 100%;
+}
+
+.w-page--single .w-body {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  height: 100%;
+}
+
+.w-page--single .b-main {
+  background-color: #1DAFED;
+  padding-bottom: 250px;
+}
+
+.w-page--single .b-footer {
+  background-color: #fff;
+  position: relative;
+  margin-top: auto;
 }
 
 .w-body {
   position: relative;
+  -webkit-transition: all .4s;
+  -o-transition: all .4s;
+  transition: all .4s;
+}
+
+.w-body.translated {
+  -webkit-transform: translateX(-50%);
+  -ms-transform: translateX(-50%);
+  transform: translateX(-50%);
 }
 
 .b-header {
@@ -346,6 +391,7 @@ select::-ms-expand {
 .b-main {
   overflow: hidden;
   padding: 60px 0 150px;
+  height: 100%;
 }
 
 .b-main__inner {
@@ -392,12 +438,16 @@ select::-ms-expand {
   background-image: url(../img/dots-accent.png);
 }
 
+.b-main__content {
+  padding-top: 150px;
+}
+
 .b-footer {
   position: absolute;
   bottom: 0;
   left: 0;
   width: 100%;
-  padding: 50px 0;
+  padding: 25px 0;
   color: #1DAFED;
 }
 
@@ -459,6 +509,18 @@ select::-ms-expand {
   height: 100%;
   background-color: #fff;
   text-align: center;
+  -webkit-transform: translateX(100%);
+  -ms-transform: translateX(100%);
+  transform: translateX(100%);
+  -webkit-transition: all .4s;
+  -o-transition: all .4s;
+  transition: all .4s;
+}
+
+.b-menu.opened {
+  -webkit-transform: translateX(0);
+  -ms-transform: translateX(0);
+  transform: translateX(0);
 }
 
 .b-menu__inner {
@@ -496,6 +558,8 @@ select::-ms-expand {
   -webkit-justify-content: center;
   -ms-flex-pack: center;
   justify-content: center;
+  position: relative;
+  opacity: .99;
 }
 
 .b-menu__left {
@@ -516,6 +580,7 @@ select::-ms-expand {
   border: none;
   cursor: pointer;
   background-color: transparent;
+  cursor: pointer;
 }
 
 .b-menu__close::before {
@@ -559,6 +624,82 @@ select::-ms-expand {
 
 .b-menu__link:hover {
   color: #000;
+}
+
+.b-menu__circle {
+  width: 300px;
+  height: 300px;
+  z-index: -1;
+}
+
+.b-menu__circle--1 {
+  bottom: 400px;
+  left: -80px;
+}
+
+.b-menu__circle--2 {
+  bottom: -80px;
+  right: -80px;
+}
+
+.b-portfolioSingle {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.b-portfolioSingle__img {
+  width: 480px;
+  height: 480px;
+  -webkit-background-size: cover;
+  background-size: cover;
+}
+
+.b-portfolioSingle__info {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  color: #fff;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  padding: 50px 100px;
+  -webkit-box-pack: justify;
+  -webkit-justify-content: space-between;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+}
+
+.b-portfolioSingle__name {
+  text-transform: uppercase;
+  font-size: 48px;
+  color: inherit;
+  text-decoration: none;
+  display: block;
+}
+
+.b-portfolioSingle__name:hover {
+  text-decoration: underline;
+}
+
+.b-portfolioSingle__description {
+  font-size: 18px;
+  display: block;
+}
+
+.b-portfolioSingle__cite {
+  font-size: 18px;
+  display: block;
+  text-decoration: none;
+  color: inherit;
+}
+
+.b-portfolioSingle__cite:hover {
+  text-decoration: underline;
 }
 
 /* Desktop-frist */
