--- a/pug/index.pug
+++ b/pug/index.pug
@@ -23,6 +23,8 @@ html
 				.b-menu
 					.b-menu__inner
 						.b-menu__right
+							.b-menu__circle.b-menu__circle--1
+							.b-menu__circle.b-menu__circle--2
 							button.b-menu__close
 							.b-menu__wrap
 								ul.b-menu__list
@@ -63,37 +65,37 @@ html
 										.b-portfolio__img(style="background-image: url(img/portfolio-img-1.jpg);")
 										.b-portfolio__item-circle
 										.b-portfolio__item-wrap
-											a.b-portfolio__name(href="") Sheff Log
+											a.b-portfolio__name(href="single.html") Sheff Log
 											p.b-portfolio__description  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam, obcaecati?
 									li.b-portfolio__item
 										.b-portfolio__img(style="background-image: url(img/portfolio-img-1.jpg);")
 										.b-portfolio__item-circle
 										.b-portfolio__item-wrap
-											a.b-portfolio__name(href="") Sheff Log
+											a.b-portfolio__name(href="single.html") Sheff Log
 											p.b-portfolio__description  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam, obcaecati?
 									li.b-portfolio__item
 										.b-portfolio__img(style="background-image: url(img/portfolio-img-1.jpg);")
 										.b-portfolio__item-circle
 										.b-portfolio__item-wrap
-											a.b-portfolio__name(href="") Sheff Log
+											a.b-portfolio__name(href="single.html") Sheff Log
 											p.b-portfolio__description  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam, obcaecati?
 									li.b-portfolio__item
 										.b-portfolio__img(style="background-image: url(img/portfolio-img-1.jpg);")
 										.b-portfolio__item-circle
 										.b-portfolio__item-wrap
-											a.b-portfolio__name(href="") Sheff Log
+											a.b-portfolio__name(href="single.html") Sheff Log
 											p.b-portfolio__description  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam, obcaecati?
 									li.b-portfolio__item
 										.b-portfolio__img(style="background-image: url(img/portfolio-img-1.jpg);")
 										.b-portfolio__item-circle
 										.b-portfolio__item-wrap
-											a.b-portfolio__name(href="") Sheff Log
+											a.b-portfolio__name(href="single.html") Sheff Log
 											p.b-portfolio__description  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam, obcaecati?
 									li.b-portfolio__item
 										.b-portfolio__img(style="background-image: url(img/portfolio-img-1.jpg);")
 										.b-portfolio__item-circle
 										.b-portfolio__item-wrap
-											a.b-portfolio__name(href="") Sheff Log
+											a.b-portfolio__name(href="single.html") Sheff Log
 											p.b-portfolio__description  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam, obcaecati?
 									
 				.b-footer
@@ -105,3 +107,4 @@ html
 								a.b-socials__item.b-socials__item--mail(href="")
 								a.b-socials__item.b-socials__item--phone(href="")
 							p.b-footer__copyright #[span.js-year 2018] © Owl Wing
+		script(src="js/common.js")
