--- a/app/css/style.css
+++ b/app/css/style.css
@@ -85,7 +85,7 @@ select::-ms-expand {
   vertical-align: top;
 }
 
-.w-page--single .b-main__circle, .w-page--info .b-main__circle, .b-hero__circle, .b-main__circle, .b-menu__circle {
+.w-page--single .b-main__circle, .w-page--other .b-main__circle, .b-hero__circle, .b-main__circle, .b-menu__circle {
   background-repeat: no-repeat;
   background-position: 50% 50%;
   -webkit-background-size: cover;
@@ -93,7 +93,7 @@ select::-ms-expand {
   position: absolute;
 }
 
-.w-page--single .b-main__circle, .w-page--info .b-main__circle, .b-hero__circle {
+.w-page--single .b-main__circle, .w-page--other .b-main__circle, .b-hero__circle {
   background-image: url(../img/circle.png);
 }
 
@@ -105,11 +105,11 @@ select::-ms-expand {
   background-color: #fff;
 }
 
-.w-page--single, .w-page--info {
+.w-page--single, .w-page--other {
   height: 100%;
 }
 
-.w-page--single .w-body, .w-page--info .w-body {
+.w-page--single .w-body, .w-page--other .w-body {
   background-color: #1DAFED;
   display: -webkit-box;
   display: -webkit-flex;
@@ -123,7 +123,7 @@ select::-ms-expand {
   height: 100%;
 }
 
-.w-page--single .b-main, .w-page--info .b-main {
+.w-page--single .b-main, .w-page--other .b-main {
   padding: 150px 0 50px;
   -webkit-box-flex: 1;
   -webkit-flex: 1 0 auto;
@@ -131,7 +131,7 @@ select::-ms-expand {
   flex: 1 0 auto;
 }
 
-.w-page--single .b-footer, .w-page--info .b-footer {
+.w-page--single .b-footer, .w-page--other .b-footer {
   background-color: #fff;
   -webkit-box-flex: 0;
   -webkit-flex: 0 0 auto;
@@ -139,7 +139,11 @@ select::-ms-expand {
   flex: 0 0 auto;
 }
 
-.w-page--info .b-main__content {
+.w-page--other .b-main {
+  padding: 100px 0 50px;
+}
+
+.w-page--other .b-main__content {
   max-width: 650px;
   margin: 0 auto;
 }
@@ -588,7 +592,7 @@ select::-ms-expand {
 
 .b-menu__close {
   position: absolute;
-  top: 75px;
+  top: 55px;
   right: 75px;
   width: 45px;
   height: 45px;
@@ -617,6 +621,10 @@ select::-ms-expand {
   margin-top: 20px;
   font-size: 24px;
   line-height: 1;
+}
+
+.b-menu__list {
+  position: relative;
 }
 
 .b-menu__item {
@@ -706,6 +714,7 @@ select::-ms-expand {
 .b-contacts {
   color: #fff;
   text-align: center;
+  position: relative;
 }
 
 .b-contacts__title {
@@ -716,6 +725,11 @@ select::-ms-expand {
 .b-contacts__email {
   font-size: 24px;
   color: #1645B9;
+  margin: 0;
+}
+
+.b-form {
+  margin-top: 15px;
 }
 
 .b-form__group {
@@ -727,7 +741,7 @@ select::-ms-expand {
 }
 
 .b-form__group + .b-form__group {
-  margin-top: 30px;
+  margin-top: 20px;
 }
 
 .b-form__label {
@@ -760,6 +774,53 @@ select::-ms-expand {
   max-width: 160px;
 }
 
+.b-about {
+  color: #fff;
+  text-align: center;
+}
+
+.b-about__title {
+  font-size: 36px;
+  margin: 0;
+}
+
+.b-slider {
+  overflow: hidden;
+  font-size: 0;
+  position: relative;
+  margin: 0 auto;
+}
+
+.slick-dots {
+  position: absolute;
+  bottom: 25px;
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+  -ms-transform: translateX(-50%);
+  transform: translateX(-50%);
+}
+
+.slick-dots li {
+  display: inline-block;
+  width: 10px;
+  height: 10px;
+  background-color: #1DAFED;
+  -webkit-border-radius: 50%;
+  border-radius: 50%;
+  margin: 0 5px;
+}
+
+.slick-dots li.slick-active {
+  background-color: #1645B9;
+}
+
+.slick-dots button {
+  padding: 0;
+  font-size: 0;
+  background-color: transparent;
+  border: none;
+}
+
 /* Desktop-frist */
 @media only screen and (max-width: 991px) {
   /**/
@@ -768,4 +829,16 @@ select::-ms-expand {
 /* Mobile-first */
 @media only screen and (min-width: 992px) {
   /**/
+}
+
+@media only screen and (max-height: 900px) {
+  .b-slider {
+    max-width: 400px;
+  }
+  .b-about__subtitle {
+    display: none;
+  }
+  .b-about__text {
+    display: none;
+  }
 }
