--- a/pug/contacts.pug
+++ b/pug/contacts.pug
@@ -18,7 +18,7 @@ html
 		script(src="http://ctr-localhost.ru/vlad/jq.js")
 
 	body
-		.w-page.w-page--info
+		.w-page.w-page--other
 			.w-menu
 				.b-menu
 					.b-menu__inner
@@ -28,9 +28,9 @@ html
 							button.b-menu__close
 							.b-menu__wrap
 								ul.b-menu__list
-									lu.b-menu__item #[a.b-menu__link(href="") Портфолио]
-									lu.b-menu__item #[a.b-menu__link(href="") О нас]
-									lu.b-menu__item #[a.b-menu__link(href="") Контакты]
+									li.b-menu__item #[a.b-menu__link(href="index.html#portfolio") Портфолио]
+									li.b-menu__item #[a.b-menu__link(href="about.html") О нас]
+									li.b-menu__item #[a.b-menu__link(href="contacts.html") Контакты]
 						.b-menu__left
 							.b-menu__wrap
 								.b-menu__socials.b-socials
@@ -43,31 +43,32 @@ html
 				.b-header
 					.container
 						.b-header__inner
-							img.b-header__logo(src="img/logo.png", alt="")
+							a(href="index.html")
+								img.b-header__logo(src="img/logo.png", alt="")
 							button.b-header__toggle
 				.b-main
 					.b-main__inner
 						.b-main__circle.b-main__circle--1
 						.b-main__circle.b-main__circle--2
 						.b-main__content
-							.b-contacts
-								h1.b-contacts__title Привет!
-								p.b-contacts__lead Спасибо за проявленный интерес к нашей работе! Для нас это очень важно, именно поэтому у тебя есть массу ваиантов связаться с нами, и чтобы облегчить тебе твою потребность заполни форму ниже или напиши сразу на наш e-mail
-								p.b-contacts__email danikkiselev@gmail.ru
-								.b-contacts__form
-									form.b-form(action="", method="post")
-										.b-form__inner
-											.b-form__group
-												label.b-form__label(for="name") Ваше имя
-												input(type="text", name="name", id="name").b-form__field
-											.b-form__group
-												label.b-form__label(for="phone") Ваш e-mail
-												input(type="tel", name="phone", id="phone").b-form__field
-											.b-form__group
-												label.b-form__label(for="msg") Комментарий
-												textarea(name="msg", id="msg", rows=10).b-form__field
-											button.b-form__btn Отправить
-
+							.container
+								.b-contacts
+									h1.b-contacts__title Привет!
+									p.b-contacts__lead Спасибо за проявленный интерес к нашей работе! Для нас это очень важно, именно поэтому у тебя есть массу ваиантов связаться с нами, и чтобы облегчить тебе твою потребность заполни форму ниже или напиши сразу на наш e-mail
+									p.b-contacts__email danikkiselev@gmail.ru
+									.b-contacts__form
+										form.b-form(action="", method="post")
+											.b-form__inner
+												.b-form__group
+													label.b-form__label(for="name") Ваше имя
+													input(type="text", name="name", id="name").b-form__field
+												.b-form__group
+													label.b-form__label(for="phone") Ваш e-mail
+													input(type="tel", name="phone", id="phone").b-form__field
+												.b-form__group
+													label.b-form__label(for="msg") Комментарий
+													textarea(name="msg", id="msg", rows=3).b-form__field
+												button.b-form__btn Отправить
 				.b-footer
 					.container
 						.b-footer__inner
