--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -10,3 +10,13 @@
 @media only screen and (min-width : 992px)
 	/**/
 
+
+@media only screen and (max-height: 900px)
+	.b-slider
+		max-width: 400px
+	.b-about
+		&__subtitle
+			display: none
+		&__text
+			display: none
+
