--- a/pug/index.pug
+++ b/pug/index.pug
@@ -51,7 +51,7 @@ html
 						.b-hero__inner
 							.b-hero__circle.b-hero__circle--1
 							.b-hero__circle.b-hero__circle--2
-							p.b-hero__slogan Делаем дизайн от нас, для вас именно поэтому #[br] Owl Wing всегда с вами.
+							p.b-hero__slogan Делаем дизайн от нас, для вас именно поэтому Owl Wing всегда с вами.
 				.b-main.b-main--portfolio
 					.container
 						.b-main__inner
