--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -7,13 +7,22 @@
 	body
 		font-size: 15px
 
-		.container
-			max-width: 600px
+	.container
+		max-width: 600px
 
-	.b-header
-		padding-top: 25px
-		&__logo
-			width: 120px
+	.w-page
+		background-color: #fff
+		&--single,
+		&--other
+			.w-body
+				background-image: none
+			.b-main
+				padding: 100px 0 50px
+
+		.b-header
+			padding-top: 25px
+			&__logo
+				width: 120px
 
 	.b-hero
 		&__inner
@@ -23,13 +32,21 @@
 			max-width: 400px
 			font-size: 26px
 			line-height: 1.2
+		&__circle
+			&--2
+				top: -250px
 
 	.b-main
-		padding: 50px 0
 		&__title
 			font-size: 26px
 		&__dots
 			display: none
+		&__circle
+			&--1
+				display: none
+			&--3
+				top: -20px
+				right: -310px
 
 	.b-portfolio
 		&__list
@@ -65,6 +82,27 @@
 			font-size: 24px
 		&__copyright
 			font-size: 13px
+		&__circle
+			&--2
+				right: -170px
+
+	.b-portfolioSingle
+		max-width: 600px
+		margin: 0 auto
+		display: block
+		&__img,
+		&__info
+			display: block
+		&__img
+			width: 100%
+			height: auto
+			padding-bottom: 100%
+		&__info
+			padding: 15px
+			text-align: center
+		&__description
+			margin: 15px 0
+
 
 @media only screen and (max-width : 480px)
 	.b-portfolio
